--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ julia:
   - nightly
 notifications:
   email: false
+matrix:
+  allow_failures:
+    - julia: nightly
 
 #before_install:
 #  - sudo apt-get -qq update
