--- a/Project.toml
+++ b/Project.toml
@@ -10,11 +10,11 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [compat]
-DataFrames = "≥ 0.11.3"
-DataStructures = "≥ 0.7.4"
+DataFrames = "0.11.3"
+DataStructures = "0.7.4"
 #Missings = "≥ 0.2.10"
-PyCall = "≥ 1.9.0"
-julia = "≥ 0.7.0"
+PyCall = "1.9.0"
+julia = "1.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
