--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 [compat]
 DataFrames = "0.11.3, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20, 0.21, 0.22, 1.0"
 DataStructures = "0.7.4, 0.8, 0.10,0.11,0.12,0.14,0.15,0.16,0.17, 0.18"
-PyCall = "1.9, 1.10, 1.11, 1.12, 1.13, 1.14, 1.15, 1.16, 1.17, 1.18, 1.90, 1.91"
+PyCall = "1.9, 1.10, 1.11, 1.12, 1.13, 1.14, 1.15, 1.16, 1.17, 1.18, 1.90, 1.91, 1.92"
 julia = "1.0"
 
 [extras]
