--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "OdsIO"
 uuid = "56b0d19f-0a74-5872-92bc-f48f9c5431d4"
 authors = ["Antonello Lobianco <antonello@lobianco.org>"]
-version = "0.6.1"
+version = "0.6.2"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -11,11 +11,7 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 [compat]
 DataFrames = "0.11.3, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.20, 0.21, 0.22, 1.0"
 DataStructures = "0.7.4, 0.8, 0.10,0.11,0.12,0.14,0.15,0.16,0.17, 0.18"
-PyCall = "1.9, 1.10, 1.11, 1.12, 1.13, 1.14, 1.15, 1.16, 1.17, 1.18, 1.90, 1.91, 1.92"
+PyCall = "1.9, 1.10, 1.11, 1.12, 1.13, 1.14, 1.15, 1.16, 1.17, 1.18, 1.90, 1.91, 1.92, 1.93, 1.94"
 julia = "1.0"
 
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
-[targets]
-test = ["Test"]
